--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <ul data-js="pokedex" class="pokedex"></ul>
   </div>
   
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
